Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/multicatch/Neg02eff_final.out
Neg02eff_final.java:24:13: compiler.err.multicatch.parameter.may.not.be.assigned: ex
1 error
